--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -22,28 +22,43 @@
 
 \begin{figure}[!ht]
 \centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/apstab3x3.pdf}
-\caption{{\bf Plot of stability versus connectivity for three component systems.} }
-\label{fig:apstab3x3}
+\noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
+\caption{{\bf Characterization of stability and robustness} (A) (B) (C) (D) (E) (F) }
+\label{fig:combined}
 \end{figure}
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
-\caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
-\label{fig:connectcycle3D3x3}
-\end{figure}
+% Figure translations
+% apstab3x3 4 -> A
+% stab3x3 6 -> B
+% cycle3x3 7 -> C
+% New -> D
+% connectcycle3D3x3 5 -> E
+% New -> F
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/stab3x3.pdf}
-\caption{{\bf Plot of stability to perturbations versus connectivity for three component systems.} }
-\label{fig:stab3x3}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/apstab3x3.pdf}
+% \caption{{\bf Plot of stability versus connectivity for three component systems.} }
+% \label{fig:apstab3x3}
+% \end{figure}
 
-\begin{figure}[!ht]
-\centering
-\noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
-\caption{{\bf Plot of stability to perturbations versus number of cycles for three component systems.} }
-\label{fig:cycle3x3}
-\end{figure}
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
+% \caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
+% \label{fig:connectcycle3D3x3}
+% \end{figure}
+
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/stab3x3.pdf}
+% \caption{{\bf Plot of stability to perturbations versus connectivity for three component systems.} }
+% \label{fig:stab3x3}
+% \end{figure}
+
+% \begin{figure}[!ht]
+% \centering
+% \noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
+% \caption{{\bf Plot of stability to perturbations versus number of cycles for three component systems.} }
+% \label{fig:cycle3x3}
+% \end{figure}
