--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -23,7 +23,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=1.0\columnwidth]{fig/combinedfigs.pdf}
-\caption{{\bf Characterization of stability and robustness} (A) (B) (C) (D) (E) (F) }
+\caption{{\bf Characterization of stability and robustness according to properties of system structure} (A) Stability versus connectivity, (B) robustness versus connectivity, (C) robustness versus number of cycles, (D) robustness versus graph edit distance, (E) robustness versus number of cycles and connectivity, and (F) robustness versus graph edit distance and connectivity for three component systems.}
 \label{fig:combined}
 \end{figure}
 
