--- a/paper.tex
+++ b/paper.tex
@@ -13,7 +13,7 @@
 % Title must be 150 characters or less
 \begin{center}
 {\Large
-\textbf{Ensemble Stability of Biological Networks}
+\textbf{Hierarchical Network Structure Promotes Dynamical Robustness}
 }
 % Insert Author names, affiliations and corresponding author email.
 \\[.5cm]
